--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.github.DerekNguyenn</groupId>
     <artifactId>p2p-sim</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Peer-2-Peer Network Simulation</name>
@@ -64,11 +64,9 @@
                 <version>0.0.8</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.p2pSim/com.example.p2pSim.GUIStarter
-                            </mainClass>
+                            <mainClass>com.example.p2pSim/com.example.p2pSim.GUIStarter</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
@@ -81,4 +79,16 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/DerekNguyenn/p2p-sim</url>
+        </repository>
+        <snapshotRepository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/DerekNguyenn/p2p-sim</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
