--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <modules>
+                                <module>javafx.controls</module>
+                                <module>javafx.fxml</module>
+                            </modules>
                         </configuration>
                     </execution>
                 </executions>
